--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,3 +1,5 @@
+# .github/workflows/sonarcloud.yml
+
 name: SonarCloud Scan
 
 on:
@@ -8,28 +10,33 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build:
-    name: SonarCloud
+  sonarcloud:
+    name: SonarCloud Analysis
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch full Git history for accurate SCM data
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Install Project Dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Install Flask and any other packages
 
-      - name: SonarCloud Scan
+      - name: Run SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5.0.0
         with:
           args: >
             -Dsonar.projectKey=dardanbici_SonarSourceTest
             -Dsonar.organization=dardanbici
             -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.verbose=true
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
