--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,34 +1,5 @@
-# sonar-project.properties
-
-# Organization and Project Identifiers
-sonar.organization=dardanbici
-sonar.projectKey=dardanbici_SonarSourceTest
-
-# Project Information
-sonar.projectName=SonarSourceTest
-sonar.projectVersion=1.0
-
-# Sources
-sonar.sources=.
-
-# Language
-sonar.language=py
-
-# Encoding
-sonar.sourceEncoding=UTF-8
-
-# Exclude third-party libraries or non-code files
-sonar.exclusions=**/__pycache__/**, **/*.md, **/*.txt, **/venv/**
-
-# Force Python version detection for more accurate SAST
-sonar.python.version=3.10
-
-# Improve SCM (Git) info by disabling shallow clone
-sonar.scm.disabled=false
-
-# Additional settings for better PR analysis
-sonar.pullrequest.provider=GitHub
-sonar.pullrequest.github.repository=dardanbici/SonarSourceTest
-
-# Disable automatic analysis warnings
-sonar.sonarcloud.skipAutomaticAnalysis=false
+sonar-scanner \
+  -Dsonar.projectKey=SonarTestDemoRicardo \
+  -Dsonar.sources=. \
+  -Dsonar.host.url=http://localhost:9000 \
+  -Dsonar.token=sqp_84e0a5d005a86dfdac359055f0c8d6f660e29011
